--- a/audit-authorization/src/main/resources/application.properties
+++ b/audit-authorization/src/main/resources/application.properties
@@ -19,8 +19,8 @@ server.port = 8100
 #MYSQL Details
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${DB_HOSTNAME:localhost}:${DB_PORT:3306}/${DB_DATABASE:ams}
-spring.datasource.username=${DB_USER:root}
-spring.datasource.password=${DB_PASS:NSumanthBhat@6}
+spring.datasource.username=${DB_USER:<MYSQL Username>}
+spring.datasource.password=${DB_PASS:<MySQL Password>}
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
